# pyminder

./: .gitattribute  .gitignore  alembic.ini  build_exe.bat  main.py  main.spec  mypy.ini  notes.md  pylintrc.toml  pyproject.toml  readme.md  requirements.txt
lib/: api.py  app_types.py  application.py  clock_timer.py  log_helper.py  models.py  timer.py  transformer.py
pyminder/: main.py
pyminder/lib/: api.py  app_types.py  application.py  log_helper.py  models.py  timer.py  transformer.py
schema/: env.py
schema/versions/: 2a090b83d8ac_no_blank_project_name.py  3606fe990453_add_is_active_flags_to_all_relevant_.py  377924faccbf_ensure_only_one_project_task.py  45f2a027037b_add_new_reason_to_stop.py  5b6399797fdc_more_fine_tuning.py  864bfaf7a2f7_add_missing_date_for_events.py  8c8bdea55759_new_shortcut_table.py  c53c6d258a19_initial.py  cdbb1c1c6e59_added_is_active_to_all_table.py  d1c8fc4b8ab4_add_forgotten_name_field.py  d49d722eb025_make_things_a_little_easier_events_are_.py  e0c0bcba40cb_no_empty_names.py  f23a6909ffd6_fix_foreignkeys_to_cascade_delete.py  f46712611c85_simplify_stop_reasons.py  (+1 more)
scripts/: day_activities.py  entry_second_audit.py  event_breakdown.py  get_or_create.py  new_entry.py  report_text.py  reports.py  sa2panda.py  task_seconds.py  time_tests.py  upsert_event.py
tests/: test_transformer_dict_type.py  test_transformer_typeddict_2_interface.py
ui/: .eslintignore  .eslintrc.cjs  .prettierrc.cjs  .stylelintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  vite.config.mjs  vitest.setup.mjs
(+67 files in other folders)
