[tool.poetry]
name = "pyminder"
version = "0.1.0"
description = ""
authors = ["devdave <devdave@ominian.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.26"
alembic = "^1.13.1"
pycparser = "^2.21"
jinja2 = "^3.1.3"
mypy = "^1.8.0"
pandas = "^2.2.1"
flask = "^3.0.2"
pandas-stubs = "^2.2.0.240218"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
